# happy_puppies

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml  simple_test.sh
core/: Cargo.toml
core/src/: lib.rs
puppy_barker/: Cargo.toml
puppy_barker/src/: main.rs
puppy_create/: Cargo.toml
puppy_create/src/: main.rs
puppy_delete/: Cargo.toml
puppy_delete/src/: main.rs
puppy_read/: Cargo.toml
puppy_read/src/: main.rs
puppy_update/: Cargo.toml
puppy_update/src/: main.rs
schema/: puppy.json  puppy_put.json
tests/: lib.rs
