[package]
name = "core"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version =  "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = "0.8"

lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "master"}
lambda_runtime_errors = "0.1"
dynomite = "0.10"
rusoto_sqs = "0.45"
rusoto_core = "0.45"
rusoto = "0.24"

